--- a/filmApp/package.json
+++ b/filmApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
@@ -17,6 +18,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.3.1",
     "react-native": "0.75",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
